--- a/src/view/app/scenario/runs.edge
+++ b/src/view/app/scenario/runs.edge
@@ -37,25 +37,21 @@
                   </div>
                 </div>
                 <div class="action">
-                  @if(run.status === "new")
-                  <a href="javascript:void(0);" title="Run" class="trigger" data-model="run" data-callback="record" data-event="click" data-id="{{run._id}}"><i class="icon-circle-filled red-color"></i></a>
-                  @elseif(run.status === "pending")
-                  <a title="Pending"><i class="icon-hourglass blue-color"></i></a>
-                  @else
-                  <a title="Pending"><i class="icon-check green-color"></i></a>
-                  @endif
+
+                  <a href="javascript:void(0);" title="Run" class="trigger" data-model="session" data-callback="openModel" data-event="click" data-values="{{run._id}}"><i class="icon-circle-filled red-color"></i></a>
+
                   <a href="javascript:void(0);" class="trigger" title="Delete" data-event="click" data-model="scenario" data-callback="delete" data-id="{{step._id}}"><i class="icon-trash"></i></a>
                 </div>
               </div>
             </div>
             <div class="meta run-info" id="RI{{run._id}}">
               <ul class="hidden">
-                @if(run.values && run.values.length > 0)
-                @each(value in run.values)
-                <li class="weight400 grey-color"><span class="tag">{{value.target}}</span> have <span class="tag">{{value.value}}</span> at step sequence #{{value.sequence + 1}}</li>
+                @if(run.sessions && run.sessions.length > 0)
+                @each(session in run.sessions)
+                <li class="weight400 grey-color">Session <span class="tag">{{session.title}}</span> has sequence <span class="tag">{{session.sequence}}</span></li>
                 @endeach
                 @else
-                <li><p class="weight400">No values in this run</p></li>
+                <li><p class="weight400">No session !! To add click record button</p></li>
                 @endif
               </ul>
             </div>
@@ -79,24 +75,68 @@
         <label>Description (optional)</label>
         <input type="text" name="description" placeholder="Enter description" class="input-control description"/>
       </div>
-      @if(runs[0].values.length > 0)
-      <div class="form-row">
-        <label>Values</label>
-        <ul class="sub-elements">
-          @each(value in runs[0].values)
-          <li>
-            <label class="px12">{{value.target}}</label>
-            <input type="text" name="values[{{value.step}}]" placeholder="Enter value" class="input-control step_{{value.step}}" data-validate="required"/>
-          </li>
-          @endeach
-        </ul>
-      </div>
-      @endif
       <div class="form-row">
         <button class="btn btn-blue"><i class="icon-check"></i> Save Run</button>
         <button class="btn btn-blank" onclick="Util.modal.close();"><i class="icon-times"></i> Cancel</button>
       </div>
     </form>
   </div>
+</script>
+<script type="text/html" id="AddSession">
+    <div class="login">
+        <h3 class="weight700 modal-title">Session</h3>
+            <form class="form" name="AddSession">
+              <input type="hidden" id="RunId" name="run" value="" />
+              <div class="form-row">
+                <label>Title</label>
+                <input type="text" id="SessionTitle" name="title" placeholder="Enter title" class="input-control title" data-validate="required" />
+              </div>
+              <div class="form-row">
+                   <label>Sequence</label>
+                    <input type="text" id="SessionSeq" name="sequence" placeholder="Enter description" class="input-control description" data-validation="required"/>
+               </div>
+              <div class="form-row">
+                <label>Description (optional)</label>
+                <input type="text" id="SessionDes" name="description" placeholder="Enter description" class="input-control description"/>
+              </div>
+              <div class="form-row">
+                            <label>File</label>
+                            <input type="file" id="SessionFile" name="file" class="input-control">
+                            </div>
+              <div class="form-row">
+                <button class="btn btn-blank" onclick="Util.modal.close();"><i class="icon-times"></i> Cancel</button>
+              </div>
+            </form>
+             <button onClick="javascript:submitFile();" class="btn btn-blue"><i class="icon-check"></i> Save Session</button>
+    </div>
+</script>
+<script type="text/javascript">
+    function submitFile(){
+    var session_run = document.getElementById('RunId').value;
+    var session_title = document.getElementById("SessionTitle").value;
+    var session_sequence = document.getElementById("SessionSeq").value;
+    var session_des = document.getElementById("SessionDes").value;
+    var session_file = document.getElementById("SessionFile").files[0];
+    var session_data = new FormData();
+    session_data.append('file', session_file);
+    session_data.append('run', session_run);
+    session_data.append('sequence', session_sequence);
+    session_data.append('description', session_des);
+    session_data.append('title', session_title);
+
+
+    fetch('http://0.0.0.0:4000/app/session/save', {
+      method: 'POST',
+      body: session_data
+    }).then(function(res){
+        res.json().then(function(res){
+            Util.alert.show(res);
+            if(res.reload) Util.redirect(location.href, true);
+        });
+    }).catch(function(err){
+       console.log(err)
+    })
+    }
+
 </script>
 @endsection
