--- a/src/view/app/scenario/differences.edge
+++ b/src/view/app/scenario/differences.edge
@@ -11,7 +11,6 @@
           </div>
         </div>
         <div class="col-md-6 text-right">
-          <div class="relative"><a href="javascript:void(0);" class="add-button trigger" data-values='{{stringify(runs[0].values)}}' data-event="click" data-model="run" data-callback="openModel"><i class="icon-plus"></i></a></div>
           <ul class="bluck-actions" id="RunBulkAction">
             <li><a href="javascript:void(0);" class="btn btn-green btn-xs trigger" data-event="click" data-model="run" data-callback="compare" data-mode="bulk"><i class="icon-copy"></i> Compare</a></li>
             <li><a href="javascript:void(0);" class="btn btn-red btn-xs trigger" data-event="click" data-model="run" data-callback="delete" data-mode="bulk"><i class="icon-trash"></i> Delete</a></li>
@@ -24,41 +23,24 @@
     <div class="row">
       <div class="col-md-12">
         <div class="list-container">
-          @each(run in runs)
-          <div class="list-item trigger" id="_{{run.id}}" data-status="{{run.status}}" data-event="click" data-model="common" data-callback="accordien" data-group=".run-info" data-ele="#RI{{run._id}}">
+          @each(diff in differences)
             <div class="inner">
               <div class="row">
-                <div class="sn weight400 trigger" data-event="click" data-model="common" data-callback="select" data-app-model="run" data-bulk-id="#RunBulkAction" data-id="{{run._id}}">{{pad($loop.index + 1, 2)}}</div>
-                <div class="check trigger" data-event="click" data-model="common" data-callback="select" data-app-model="run" data-bulk-id="#RunBulkAction" data-id="{{run._id}}"><i class="icon-check"></i></div>
+                <div class="sn weight400 trigger" data-event="click" data-model="common" data-callback="select" data-app-model="run" data-bulk-id="#RunBulkAction" data-id="{{diff._id}}">{{pad($loop.index + 1, 2)}}</div>
+                <div class="check trigger" data-event="click" data-model="common" data-callback="select" data-app-model="run" data-bulk-id="#RunBulkAction" data-id="{{diff._id}}"><i class="icon-check"></i></div>
                 <div class="col-md-11">
                   <div class="info">
-                    <p class="px16 weight400 black-color">{{run.title}}</p>
-                    <p class="px12 grey-color">{{run.description || "No descriptrion added"}}</p>
+                    <p class="px16 weight400 black-color">{{diff.url}}</p>
+                    <p class="px12 weight400 grey-color">key: {{diff.key}}   Location: {{diff.location}}   Session: {{diff.session_sequence}}</p>
+
                   </div>
-                </div>
-                <div class="action">
-
-                  <a href="javascript:void(0);" title="Run" class="trigger" data-model="session" data-callback="openModel" data-event="click" data-values="{{run._id}}"><i class="icon-circle-filled red-color"></i></a>
-
-                  <a href="javascript:void(0);" class="trigger" title="Delete" data-event="click" data-model="scenario" data-callback="delete" data-id="{{step._id}}"><i class="icon-trash"></i></a>
                 </div>
               </div>
             </div>
-            <div class="meta run-info" id="RI{{run._id}}">
-              <ul class="hidden">
-                @if(run.sessions && run.sessions.length > 0)
-                @each(session in run.sessions)
-                <li class="weight400 grey-color">Session <span class="tag">{{session.title}}</span> has sequence <span class="tag">{{session.sequence}}</span></li>
-                @endeach
-                @else
-                <li><p class="weight400">No session !! To add click record button</p></li>
-                @endif
-              </ul>
-            </div>
-          </div>
           @endeach
         </div>
       </div>
     </div>
   </div>
 </section>
+@endsection
