--- a/src/view/app/scenario/correlation.edge
+++ b/src/view/app/scenario/correlation.edge
@@ -23,7 +23,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="list-container">
-          @each(diff in differences)
+          @each(correlation in correlations)
            <div class="list-item trigger" id="_{{run.id}}" data-status="{{run.status}}" data-event="click" data-model="common" data-callback="accordien" data-group=".run-info" data-ele="#RI{{run._id}}">
             <div class="inner">
               <div class="row">
@@ -31,11 +31,12 @@
                 <div class="check trigger" data-event="click" data-model="common" data-callback="select" data-app-model="run" data-bulk-id="#RunBulkAction" data-id="{{diff._id}}"><i class="icon-check"></i></div>
                 <div class="col-md-11">
                   <div class="info">
-                    <p class="px16 weight400 black-color">{{diff.url}}</p>
-                    <p class="px16 weight400 black-color">{{diff._id}}</p>
-                    <p class="px12 weight400 grey-color">key: {{diff.key}}   Location: {{diff.location}}   Session: {{diff.session_sequence}}</p>
-                    <p class="px12 weight400 grey-color">First: {{diff.first.value}}   Second: {{diff.second.value}}</p>
-                    <p class="px12 weight400 grey-color">First: {{diff.first.request}}   Second: {{diff.second.request}}</p>
+                    <p class="px16 weight400 black-color">Req1: {{correlation.first.request}} || Req2: {{correlation.second.request}}</p>
+                    <p class="px14 weight400 grey-color">key: {{correlation.key}} || Location: {{correlation.location}} ||  Reg: {{correlation.reg}}</p>
+                    <p class="px12 weight400 black-color">First Matched: {{correlation.first.matched}} || Second Matched: {{correlation.second.matched}}</p>
+                    <p class="px14 weight400 grey-color">First Session: {{correlation.first.session_title}} || Second Session: {{correlation.second.session_title}}</p>
+                    <p class="px14 weight400 grey-color">First Url: {{correlation.first.url}} || Second Url: {{correlation.second.url}}</p>
+                    <p class="px16 weight400 black-color">Final Reg: {{correlation.final_regex}}</p>
                    </div>
                   </div>
                 </div>
