--- a/src/view/app/scenario/runs.edge
+++ b/src/view/app/scenario/runs.edge
@@ -126,7 +126,7 @@
     session_data.append('scenario',session_scenario);
 
 
-    fetch('http://13.233.87.45:4000/app/session/save', {
+    fetch('/app/session/save', {
       method: 'POST',
       body: session_data
     }).then(function(res){
