updated till reg count

--- a/src/view/app/scenario/correlation.edge
+++ b/src/view/app/scenario/correlation.edge
@@ -33,6 +33,7 @@
                 <div class="col-md-11">
                   <div class="info">
                     <p class="px16 weight400 black-color">Req1: {{correlation.first.request}} || Req2: {{correlation.second.request}}</p>
+                     <p class="px16 weight400 black-color">Count1: {{correlation.first.atPos}} || Count2: {{correlation.second.atPos}}</p>
                     <p class="px14 weight400 grey-color">key: {{correlation.key}} || Location: {{correlation.location}} ||  Reg: {{correlation.reg}}</p>
                     <p class="px12 weight400 black-color">First Matched: {{correlation.first.matched}} || Second Matched: {{correlation.second.matched}}</p>
                     <p class="px14 weight400 grey-color">First Session: {{correlation.first.session_title}} || Second Session: {{correlation.second.session_title}}</p>
