updated with jmx chganges and fixed bugs

--- a/src/view/app/project/scenarios.edge
+++ b/src/view/app/project/scenarios.edge
@@ -36,7 +36,7 @@
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="date">17 May, 2018</div>
+                  <div class="date">{{scenario.added_on}}</div>
                 </div>
                 <div class="action">
                   <a href="" title="Edit"><i class="icon-edit"></i></a>
