--- a/src/view/app/scenario/runs.edge
+++ b/src/view/app/scenario/runs.edge
@@ -92,7 +92,7 @@
               </div>
               <div class="form-row">
                    <label>Sequence</label>
-                    <input type="text" id="SessionSeq" name="sequence" placeholder="Enter description" class="input-control description" data-validation="required"/>
+                    <input type="text" id="SessionSeq" name="sequence" placeholder="Enter Sequence Number" class="input-control description" data-validation="required"/>
                </div>
               <div class="form-row">
                 <label>Description (optional)</label>
