upadte direct on server

--- a/src/view/layout/Backup_page.edge
+++ b/src/view/layout/Backup_page.edge
@@ -7,7 +7,7 @@
   @if(global && global.title)
   <title>{{global.title}} &mdash; xmeter&mdash; Performance testing made easy&trade;</title>
   @else
-  <title>PerfEasy &trade;&mdash; Performance testing made easy</title>
+  <title>xmeter &mdash; Performance testing made easy&trade;</title>
   @endif
 
   <link rel="stylesheet" type="text/css" href="/dist/css/page.min.css" />
@@ -17,7 +17,7 @@
   <link rel="icon" href="/dist/img/icon-96x96.png" sizes="96x96" />
   <link rel="icon" href="/dist/img/icon-144x144.png" sizes="144x144" />
 
-  <meta name="title" content="PerfEasy" />
+  <meta name="title" content="xmeter" />
   <meta name="description" content="Performance testing made easy" />
 </head>
 <body>
