--- a/src/view/page/home.edge
+++ b/src/view/page/home.edge
@@ -5,8 +5,8 @@
     <div class="row">
       <div class="col-md-5">
         <div class="intro">
-          <h2 class="color-black">Automate your <span class="weight700">Performance Testing</span></h2>
-          <p class="px18">Vestibulum in est facilisis metus dapibus interdum nec eu magna</p>
+          <h2 class="color-black">Making <span class="weight700">Performance Testing</span> Easy</h2>
+          <p class="px18"><b>Patent Pending technology to enable Automated Scripting, Test Executions & Reporting</b></p>
           <div class="cta"><a href="" class="btn btn-lg btn-blue">Get started for free</a></div>
         </div>
       </div>
@@ -21,48 +21,48 @@
     <div class="row">
       <div class="col-md-12">
         <div class="title text-center">
-            <h2>Do more with <span class="weight700"><span class="red-color">x</span>meter</span></h2>
-            <p class="px18">Vestibulum in est facilisis metus dapibus interdum nec eu magna</p>
+            <h2>Do more with <span class="weight700"><span class="blue-color">P</span>erf<span class="red-color">E</span>asy</span>&trade;</h2>
+            <p class="px18">Complete Performance testing within hours (Includes script prpearation, scenario design, load test executions, Reporting) </p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
         <div class="feature text-center">
-          <h3>Automated JMX Generator</h3>
-          <p class="weight400">Vestibulum in est facilisis metus dapibus interdum nec eu magna. In lacinia purus mi, et ultricies sapien consequat quis</p>
+          <h3>No Skill required for Scripting</h3>
+          <p class="weight400">Two step process to create and enhance Scripts (automated corelation, parameterization, delays etc) for any load test tool</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="feature text-center">
-          <h3>Automated Co-relations</h3>
-          <p class="weight400">Vestibulum in est facilisis metus dapibus interdum nec eu magna. In lacinia purus mi, et ultricies sapien consequat quis</p>
+          <h3>Automated Performance Benchmarking</h3>
+          <p class="weight400">Patent Pending 'Intelliload' engine will automatically design multiple load test scenarios & share intuitive benchmark report</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="feature text-center">
-          <h3>Automated cloud testing</h3>
-          <p class="weight400">Vestibulum in est facilisis metus dapibus interdum nec eu magna. In lacinia purus mi, et ultricies sapien consequat quis</p>
+          <h3>Har to Jmeter script generator</h3>
+          <p class="weight400">Upload your har file and get a modular Jmeter script with automatic addition of transaction controllers</p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
         <div class="feature text-center">
-          <h3>One time senario recording</h3>
-          <p class="weight400">Vestibulum in est facilisis metus dapibus interdum nec eu magna. In lacinia purus mi, et ultricies sapien consequat quis</p>
+          <h3>Load Distribution across Geographies</h3>
+          <p class="weight400">Distribute your load across different geographical locations</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="feature text-center">
-          <h3>Multiple field values</h3>
-          <p class="weight400">Vestibulum in est facilisis metus dapibus interdum nec eu magna. In lacinia purus mi, et ultricies sapien consequat quis</p>
+          <h3>Zero Effort for Testing and reporting</h3>
+          <p class="weight400">Our Patent Pending technology 'Intelliload' and 'IntelliReport' will do all the tasks of scenario designing and reporting</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="feature text-center">
-          <h3>Consolidated testing reports</h3>
-          <p class="weight400">Vestibulum in est facilisis metus dapibus interdum nec eu magna. In lacinia purus mi, et ultricies sapien consequat quis</p>
+          <h3>Shortest Time to go Live</h3>
+          <p class="weight400">Complete Performance testing cycle within a few hours without any manual intervention</p>
         </div>
       </div>
     </div>
