updated with correlations fixes

--- a/src/view/app/scenario/correlation.edge
+++ b/src/view/app/scenario/correlation.edge
@@ -11,7 +11,7 @@
           </div>
         </div>
         <div class="col-md-6 text-right">
-        <a href="/{{scenario.name}}.jmx" class="btn btn-green btn-xs"><i class="icon-copy"></i>Download JMX</a>
+        <a href="/{{scenario.jmx_file_name}}" class="btn btn-green btn-xs"><i class="icon-copy"></i>Download JMX</a>
           <ul class="bluck-actions" id="RunBulkAction">
             <li><a href="javascript:void(0);" class="btn btn-green btn-xs trigger" data-event="click" data-model="run" data-callback="compare" data-mode="bulk"><i class="icon-copy"></i> Compare</a></li>
             <li><a href="javascript:void(0);" class="btn btn-red btn-xs trigger" data-event="click" data-model="run" data-callback="delete" data-mode="bulk"><i class="icon-trash"></i> Delete</a></li>
