--- a/src/view/app/scenario/differences.edge
+++ b/src/view/app/scenario/differences.edge
@@ -33,6 +33,7 @@
                   <div class="info">
                     <p class="px16 weight400 black-color">{{diff.url}}</p>
                     <p class="px16 weight400 black-color">{{diff._id}}</p>
+                    <p class="px16 weight400 black-color">{{diff.sequence}}</p>
                     <p class="px12 weight400 grey-color">key: {{diff.key}}   Location: {{diff.location}}   Session: {{diff.session_sequence}}</p>
                     <p class="px12 weight400 grey-color">First: {{diff.first.value}}   Second: {{diff.second.value}}</p>
                     <p class="px12 weight400 grey-color">First: {{diff.first.request}}   Second: {{diff.second.request}}</p>
