updated with so many things

--- a/src/view/app/element/header.edge
+++ b/src/view/app/element/header.edge
@@ -13,7 +13,7 @@
           <li>
             <div class="dropdown">
               <div class="overlay"></div>
-              <a href="javascript:void(0);" class="dropdown-trigger white-color light px12">Ashok Vishwakarma <i class="icon-angle-down"></i></a>
+              <a href="javascript:void(0);" class="dropdown-trigger white-color light px12">{{global.user.first_name}} {{global.user.last_name}}<i class="icon-angle-down"></i></a>
               <ul class="dropdown-options right">
                 <li><a href="">Settings</a></li>
                 <li><a href="/app/auth/logout">Logout</a></li>
